Language change implmentation 2

--- a/neighborhood-library/neighborhood-library/src/main/resources/messages_en.properties
+++ b/neighborhood-library/neighborhood-library/src/main/resources/messages_en.properties
@@ -8,3 +8,20 @@ check_out_prompt=Would you like to check out a book? Enter the book ID or type '
 check_out_name=Enter your name to check out the book:
 exit_message=Exiting the neighborhood library.
 invalid_option=Invalid option. Please choose 1, 2, or 3.
+showAvailableBooks = Available Books
+showList1 = ID:
+showList2 = Title:
+showList3 = ISBN:
+errorShow= Sorry we do not have available books at the moment, please check back later.
+showCheckedOutBooks= Checked Out Books
+showList11 = ID:
+showList22 = Title:
+showList33 = Checked out to:
+errorShow1= No books checked out.
+promptCheckOut= Would you like to check out a book? Enter the book Id or type 'X' to go back:
+errorPromptOut= Invalid ID. Please enter the book ID.
+promptCheckIn= Would you like to check in a book? Enter the book Id or type 'X' to go back:
+errorPromptIn= Invalid ID. Please enter the book ID.
+checkOutBook= Enter your name to check out the book:
+checkOutBookError= That book ID doesn't match our records.
+checkOutSuccessMessage= Boo
