--- a/neighborhood-library/neighborhood-library/src/main/resources/messages_es.properties
+++ b/neighborhood-library/neighborhood-library/src/main/resources/messages_es.properties
@@ -8,3 +8,20 @@ check_out_prompt=¿Te gustaría sacar un libro? Ingrese el ID del libro o escriba 
 check_out_name=Ingrese su nombre para sacar el libro:
 exit_message=Saliendo de la biblioteca del vecindario.
 invalid_option=Opción inválida. Por favor, elija 1, 2 o 3.
+showAvailableBooks = Libros Disponibles
+showList1 = ID:
+showList2 = Nombre:
+showList3 = ISBN:
+errorShow= Lo siento, no tenemos libros disponibles por el momento, por favor revise en otro momento.
+showCheckedOutBooks= Libros Prestados
+showList11 = ID:
+showList22 = Nombre:
+showList33 = Prestado a:
+errorShow1= No hay libros prestados.
+promptCheckOut= ¿Le gustaría pedir prestado un Libro?, Ingrese el ID del libro o marque ´X´para volver al menu anterior:
+errorPromptOut= ID invalido, Por favor, ingrese el ID del libro.
+promptCheckIn= ¿Le gustaría registrar un libro? Ingrese el ID del libro o marque ´X´para volver al menu anterior:
+errorPromptIn= ID invalido, Por favor, ingrese el ID del libro.
+checkOutBook= Ingrese su nombre para registrar el libro prestado:
+checkOutBookError= El ID de ese libro no coincide con nuestros registros.
+
