CheckOut / CheckIn method moves to Library class, they are actions that belong to the library not from a book Language Es/En (Still need main menu option to switch languages)
/

--- a/neighborhood-library/neighborhood-library/src/main/resources/messages_en.properties
+++ b/neighborhood-library/neighborhood-library/src/main/resources/messages_en.properties
@@ -23,5 +23,7 @@ errorPromptOut= Invalid ID. Please enter the book ID.
 promptCheckIn= Would you like to check in a book? Enter the book Id or type 'X' to go back:
 errorPromptIn= Invalid ID. Please enter the book ID.
 checkOutBook= Enter your name to check out the book:
+message01= The book :
+message02=  has been checked out to :
 checkOutBookError= That book ID doesn't match our records.
-checkOutSuccessMessage= Boo
+checkInn=  has been checked in by 
