--- a/neighborhood-library/neighborhood-library/src/main/resources/messages_es.properties
+++ b/neighborhood-library/neighborhood-library/src/main/resources/messages_es.properties
@@ -13,15 +13,18 @@ showList1 = ID:
 showList2 = Nombre:
 showList3 = ISBN:
 errorShow= Lo siento, no tenemos libros disponibles por el momento, por favor revise en otro momento.
-showCheckedOutBooks= Libros Prestados
+showCheckedOutBooks= Libros en Préstamo
 showList11 = ID:
 showList22 = Nombre:
 showList33 = Prestado a:
-errorShow1= No hay libros prestados.
-promptCheckOut= ¿Le gustaría pedir prestado un Libro?, Ingrese el ID del libro o marque ´X´para volver al menu anterior:
+errorShow1= No hay libros Libros en préstamo.
+promptCheckOut= ¿Le gustaría solicitar un libro ?, Digite el ID del libro o marque ´X´para volver al menu anterior:
 errorPromptOut= ID invalido, Por favor, ingrese el ID del libro.
-promptCheckIn= ¿Le gustaría registrar un libro? Ingrese el ID del libro o marque ´X´para volver al menu anterior:
-errorPromptIn= ID invalido, Por favor, ingrese el ID del libro.
-checkOutBook= Ingrese su nombre para registrar el libro prestado:
+promptCheckIn= ¿Le gustaría devolver un libro? Digite el ID del libro o marque ´X´para volver al menu anterior:
+errorPromptIn= ID invalido, Por favor digite el ID del libro.
+checkOutBook= Ingrese su nombre para registrar el prestamo del libro:
+message01= El libro :
+message02=  ha sido prestado a :
 checkOutBookError= El ID de ese libro no coincide con nuestros registros.
+checkInn=  has been checked in by 
 
